--- a/index.html
+++ b/index.html
@@ -19,22 +19,28 @@
             <div class="text3">Надеюсь ты смотришь этот сайт на ноутбуке(прост он лучше выглядит на ноуте). Если на телефоне то
                                сори если сайт большой и не оптимизированный я прост старался на 14 про макс сделать размеры подходящими и вышло
                                как то так. Так что наслаждайся предстоящими подарками и проведи свой день рождения офигенно в кругу друзей и родных людей).
-                               Кстати, на данный момент когда я пишу этот текст, это 10 июля 7 утра и я не спал всю ночь делая этот сайт хахах. 
+                               Кстати, на данный момент когда я пишу этот текст, это 10 июня 7 утра и я не спал всю ночь делая этот сайт хахах. 
                                Так что если че я сонный пишу этот текст p.s. sorry если я какую-то фигню
-                               скажу. Вобщем родная как видишь я за месяц до твоего др уже начал готовиться и
+                               скажу. Вобщем родная как видишь я за 2 месяця до твоего др уже начал готовиться и
                                так скажем подготовка идет успешно (ну так это один из подарков таких креативненьких)
                                А так хотел сказать еще раз спасибо что ты такая есть и я благодарю бога что мы в тот 
-                               день(Я, Байель и Денис) пошли посмотреть кто играет в тынике... и встретил тебя)). 
+                               день(Я, Байель и Денис) пошли посмотреть кто играет в тынике... и встретили тебя)). 
                                Ты кста первая кто реально поздравил меня с др прям в 00:00, и я очень ценю это.
                                Так скажем ты очень забывчивая ахахах если ты понимаешь и помнишь о чем я говорю (глаза)
-                               но я уже принял все и стало уже как то пофиг (но я продолжу тебя просить скинуть их как в том тренде). Желаю тебе всего наилучшего чтобы в дальнейшие годы
+                               но я уже принял все и стало уже как то пофиг. Желаю тебе всего наилучшего чтобы в дальнейшие годы
                                ты достигла своих целей и нашла много крутых друзей и может даже свою любовь.
                                Уверен я не один кто будет тебе дарить подарки по типу цветов заготовок и тд. но надеюсь
-                               что этот подарок будет только один такой особенный сделанный усердно своим трудом. Еще раз желаю тебе всего самого наилучшего,
+                               что этот подарок будет только один такой особенный сделанный усердно своим трудом. Наверное что это один их последних текстов которые ты читаешь от меня
+                               но здесь я хотел бы признаться во всем. Этот сайт в целом был предназначен как подарок и поздравление но понял что нам никак не сойтись в будущем, у меня
+                               лично было конкретное намерение на меня ведь я спустя долгих лет нашел ту самую которая читает намаз есть иман и я надеюсь в будущем наденет хиджаб.
+                               Но я понял что я совсем не твой тип и все это общение только вредит нам обоим ведь все это запрещено и в целом об этом думать не надо сейчас. И как бы 
+                               мне вобще не хотелось этого но надо прекратить наше общение и вобще в целом дружить ведь как я понял дружбы между мальчиком и девочкой не бывает(лично мое мнение).
+                               И честно скажу ты мне очень нравилась и думал об отношениях но опять же я делаю это все ради нашего же блага. Возможно ты теперь понимаешь мою бывшую
+                               типо поняла какой я слабак но я делаю все это ради Аллаха и знаю что ты должна понять. А так ты очень крутая девочка порой забывчивая но это нормально). Еще раз желаю тебе всего самого наилучшего,
                                успеха, счастья, чтобы нашла свою любовь и главное - <div class="text4">ни в коем случае не бросай читать намаз
                                и не отдаляйся от религии. </div> Честно не знаю сколько людей будет поздравлять тебя ведь ты вся
                                такая популярити хаха, но надеюсь ты обратишь внимание на этот сайт и на мои старания;) Этот маленький цветок ниже расположенный
-                               тоже посвящен тебе и хотел сказать что <div class="text5">Thank You</div> за все >.< p.s твоя лпешка)
+                               тоже посвящен тебе и хотел сказать что <div class="text5">Thank You</div> за все p.s твоя лпешка...брат...друг..
             </div>
         <img src="zveti-pexels.jpg" alt="" class="rightflower">
 
